--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/keeNYato/lab-2.git"
   },
-  "author": "",
+  "author": "keen_yato. lab-2",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/keeNYato/lab-2/issues"
